- removed csv output of agent wealth at 3 months

--- a/notebooks/Agent Based Simulation Long-Run Analysis with Snipers and Liquidators (1m data quoted in ETH).ipynb
+++ b/notebooks/Agent Based Simulation Long-Run Analysis with Snipers and Liquidators (1m data quoted in ETH).ipynb
@@ -1537,159 +1537,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = \\\n",
-    "    extract_agent_vars_for_time_step(monetary_model, quarter_year_index)\n",
-    "df.to_csv(f'agent_wealth_after_{quarter_year_index}_time_steps.csv')"
+    "# df = \\\n",
+    "#     extract_agent_vars_for_time_step(monetary_model, quarter_year_index)\n",
+    "# df.to_csv(f'agent_wealth_after_{quarter_year_index}_time_steps.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 95,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(131490, 0, 62.53806390038346),\n",
-       " (131490, 1, 94.42286674882894),\n",
-       " (131490, 2, 100.0),\n",
-       " (131490, 3, 100.0),\n",
-       " (131490, 4, 100.0),\n",
-       " (131490, 5, 100.0),\n",
-       " (131490, 6, 100.0),\n",
-       " (131490, 7, 100.0),\n",
-       " (131490, 8, 100.0),\n",
-       " (131490, 9, 31.14032622680738),\n",
-       " (131490, 10, 97.32972112354197),\n",
-       " (131490, 11, 100.0),\n",
-       " (131490, 12, 100.0),\n",
-       " (131490, 13, 100.0),\n",
-       " (131490, 14, 100.0),\n",
-       " (131490, 15, 100.0),\n",
-       " (131490, 16, 100.0),\n",
-       " (131490, 17, 100.0),\n",
-       " (131490, 18, 44.077449935373565),\n",
-       " (131490, 19, 102.08542721189959),\n",
-       " (131490, 20, 100.0),\n",
-       " (131490, 21, 100.0),\n",
-       " (131490, 22, 100.0),\n",
-       " (131490, 23, 100.0),\n",
-       " (131490, 24, 100.0),\n",
-       " (131490, 25, 100.0),\n",
-       " (131490, 26, 100.0),\n",
-       " (131490, 27, 24.961498482673647),\n",
-       " (131490, 28, 31.40261486880687),\n",
-       " (131490, 29, 100.0),\n",
-       " (131490, 30, 100.0),\n",
-       " (131490, 31, 100.0),\n",
-       " (131490, 32, 100.0),\n",
-       " (131490, 33, 100.0),\n",
-       " (131490, 34, 100.0),\n",
-       " (131490, 35, 100.0),\n",
-       " (131490, 36, 82.59760130142946),\n",
-       " (131490, 37, 126.62493175746489),\n",
-       " (131490, 38, 100.0),\n",
-       " (131490, 39, 100.0),\n",
-       " (131490, 40, 100.0),\n",
-       " (131490, 41, 100.0),\n",
-       " (131490, 42, 100.0),\n",
-       " (131490, 43, 100.0),\n",
-       " (131490, 44, 100.0),\n",
-       " (131490, 45, 60.91870153513677),\n",
-       " (131490, 46, 30.161448382895994),\n",
-       " (131490, 47, 100.0),\n",
-       " (131490, 48, 100.0),\n",
-       " (131490, 49, 100.0),\n",
-       " (131490, 50, 100.0),\n",
-       " (131490, 51, 100.0),\n",
-       " (131490, 52, 100.0),\n",
-       " (131490, 53, 100.0),\n",
-       " (131490, 54, 100.0),\n",
-       " (131490, 55, 99.16215775442943),\n",
-       " (131490, 56, 99.40331374885261),\n",
-       " (131490, 57, 99.76),\n",
-       " (131490, 58, 99.19169961529367),\n",
-       " (131490, 59, 99.2812953088),\n",
-       " (131490, 60, 99.97),\n",
-       " (131490, 61, 99.76),\n",
-       " (131490, 62, 43.83067303124525),\n",
-       " (131490, 63, 0.10462744909239922),\n",
-       " (131490, 64, 99.70040467617005),\n",
-       " (131490, 65, 99.7),\n",
-       " (131490, 66, 99.19),\n",
-       " (131490, 67, 99.28072),\n",
-       " (131490, 68, 99.85008997300406),\n",
-       " (131490, 69, 99.88),\n",
-       " (131490, 70, 99.19),\n",
-       " (131490, 71, 98.92),\n",
-       " (131490, 72, 99.73007199999999),\n",
-       " (131490, 73, 99.94),\n",
-       " (131490, 74, 99.19),\n",
-       " (131490, 75, 99.760144),\n",
-       " (131490, 76, 99.76024286504456),\n",
-       " (131490, 77, 99.82),\n",
-       " (131490, 78, 69.56711540274064),\n",
-       " (131490, 79, 99.5207196544),\n",
-       " (131490, 80, 100.25443035163227),\n",
-       " (131490, 81, 99.76),\n",
-       " (131490, 82, 99.19),\n",
-       " (131490, 83, 99.40129479081472),\n",
-       " (131490, 84, 99.88005398920082),\n",
-       " (131490, 85, 99.94),\n",
-       " (131490, 86, 99.190648),\n",
-       " (131490, 87, 99.640288),\n",
-       " (131490, 88, 99.91002699730001),\n",
-       " (131490, 89, 99.94),\n",
-       " (131490, 90, 53.64720527006638),\n",
-       " (131490, 91, 37.97309149368686),\n",
-       " (131490, 92, 94.58544951112876),\n",
-       " (131490, 93, 99.88),\n",
-       " (131490, 94, 51.88037006641836),\n",
-       " (131490, 95, 12.83278202093863),\n",
-       " (131490, 96, 99.73032377330205),\n",
-       " (131490, 97, 99.94),\n",
-       " (131490, 98, 99.19),\n",
-       " (131490, 99, 98.92),\n",
-       " (131490, 100, 99.79018890552835),\n",
-       " (131490, 101, 99.76),\n",
-       " (131490, 102, 44.47572844731112),\n",
-       " (131490, 103, 98.92115199999999),\n",
-       " (131490, 104, 99.79016194061053),\n",
-       " (131490, 105, 100.0),\n",
-       " (131490, 106, 105.09528711297938),\n",
-       " (131490, 107, 100.0006666372598),\n",
-       " (131490, 108, 100.03184767323623),\n",
-       " (131490, 109, 100.0),\n",
-       " (131490, 110, 104.45111726750942),\n",
-       " (131490, 111, 111.64209050734067),\n",
-       " (131490, 112, 100.0),\n",
-       " (131490, 113, 101.9737007136),\n",
-       " (131490, 114, 107.74037345201654),\n",
-       " (131490, 115, 107.20303917519905),\n",
-       " (131490, 116, 100.0),\n",
-       " (131490, 117, 102.33232978927614),\n",
-       " (131490, 118, 100.0),\n",
-       " (131490, 119, 105.04147238373804),\n",
-       " (131490, 120, 100.14120105861895),\n",
-       " (131490, 121, 100.0),\n",
-       " (131490, 122, 101.30133700632102),\n",
-       " (131490, 123, 100.0006907376993),\n",
-       " (131490, 124, 100.0)]"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "monetary_model.data_collector._agent_records[quarter_year_index]"
+    "# monetary_model.data_collector._agent_records[quarter_year_index]"
    ]
   },
   {
