- added directory level for the exchange where the historical data was obtained from to the directory structure for simulated data

--- a/notebooks/Data Import.ipynb
+++ b/notebooks/Data Import.ipynb
@@ -31,7 +31,15 @@
      "start_time": "2021-01-17T20:40:25.889521Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "environment variable OVERLAY_MONETARY_BASE_PATH not set defaulting to /home/michael/PycharmProjects/overlay-monetary\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime\n",
     "import os\n",
@@ -70,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-17T20:40:31.030960Z",
@@ -92,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +125,7 @@
        "'/home/michael/PycharmProjects/overlay-monetary/data/historical/ftx/1m'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
