- convert debug print statements to logging debug calls

--- a/notebooks/Convert Simulated Data from CSV to Parquet.ipynb
+++ b/notebooks/Convert Simulated Data from CSV to Parquet.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "turkish-mechanism",
    "metadata": {},
    "source": [
     "# Import Packages"
@@ -11,11 +10,10 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "brazilian-retailer",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T18:51:26.953818Z",
-     "start_time": "2021-01-18T18:51:26.935783Z"
+     "end_time": "2021-01-26T04:40:12.765388Z",
+     "start_time": "2021-01-26T04:40:12.744168Z"
     }
    },
    "outputs": [],
@@ -27,14 +25,18 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "stone-logistics",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-26T04:40:13.122500Z",
+     "start_time": "2021-01-26T04:40:12.767329Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "environment variable OVERLAY_MONETARY_BASE_PATH not set defaulting to /home/michael/PycharmProjects/overlay-monetary\n"
+      "environment variable OVERLAY_MONETARY_BASE_PATH not set defaulting to /Volumes/GIT/PycharmProjects/overlay-monetary\n"
      ]
     }
    ],
@@ -52,58 +54,62 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "geographic-andrews",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-26T04:40:20.572502Z",
+     "start_time": "2021-01-26T04:40:13.124730Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-TRX-ETH.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-XRP-BTC.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-ADA-USDT.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-XRP-USDT.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-TRX-BTC.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-EOS-ETH.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-ETC-ETH.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-TRX-USDT.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-MKR-ETH.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-XRP-ETH.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-ETH-USDT.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-BTC-USDT.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-MKR-BTC.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-ETC-BTC.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-ADA-BTC.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-EOS-USDT.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-SNX-ETH.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-ETC-USDT.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-EOS-BTC.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-ETH-BTC.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-SNX-BTC.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-42/sim-YFI-USD.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-42/sim-LINK-USD.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-42/sim-BAL-USD.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-42/sim-BTC-USD.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-42/sim-COMP-USD.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-42/sim-ETH-USD.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-0/sim-YFI-USD.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-0/sim-LINK-USD.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-0/sim-BAL-USD.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-0/sim-BTC-USD.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-0/sim-COMP-USD.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-0/sim-ETH-USD.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-100/sim-YFI-USD.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-100/sim-LINK-USD.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-100/sim-BAL-USD.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-100/sim-BTC-USD.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-100/sim-COMP-USD.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-100/sim-ETH-USD.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-115/sim-YFI-USD.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-115/sim-LINK-USD.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-115/sim-BAL-USD.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-115/sim-BTC-USD.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-115/sim-COMP-USD.parq\n",
-      "/home/michael/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-115/sim-ETH-USD.parq\n"
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-42/sim-COMP-USD.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-42/sim-BTC-USD.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-42/sim-LINK-USD.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-42/sim-ETH-USD.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-42/sim-YFI-USD.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-42/sim-BAL-USD.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-some-seed/sim-COMP-USD.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-some-seed/sim-BTC-USD.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-some-seed/sim-LINK-USD.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-some-seed/sim-ETH-USD.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-some-seed/sim-YFI-USD.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-some-seed/sim-BAL-USD.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-115/sim-COMP-USD.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-115/sim-BTC-USD.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-115/sim-LINK-USD.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-115/sim-ETH-USD.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-115/sim-YFI-USD.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-115/sim-BAL-USD.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-100/sim-COMP-USD.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-100/sim-BTC-USD.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-100/sim-LINK-USD.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-100/sim-ETH-USD.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-100/sim-YFI-USD.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/ftx/15s/sims-100/sim-BAL-USD.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-EOS-ETH.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-ETC-ETH.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-MKR-ETH.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-SNX-BTC.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-EOS-USDT.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-XRP-ETH.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-ETH-USDT.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-ETC-USDT.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-BTC-USDT.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-TRX-ETH.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-ADA-BTC.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-XRP-BTC.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-TRX-USDT.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-EOS-BTC.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-XRP-USDT.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-SNX-ETH.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-MKR-BTC.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-ETC-BTC.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-ETH-BTC.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-ADA-USDT.parq\n",
+      "/Volumes/GIT/PycharmProjects/overlay-monetary/data/simulation/kucoin/1m/sims-42/sim-TRX-BTC.parq\n"
      ]
     }
    ],
@@ -123,7 +129,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "corresponding-federation",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -146,6 +151,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
