- prepared integration of hdf5 data collection

--- a/notebooks/Agent Based Simulation Long-Run Analysis with Snipers and Liquidators (1m data quoted in ETH).ipynb
+++ b/notebooks/Agent Based Simulation Long-Run Analysis with Snipers and Liquidators (1m data quoted in ETH).ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-27T03:07:51.614010Z",
-     "start_time": "2021-01-27T03:07:51.592072Z"
+     "end_time": "2021-01-28T02:40:06.186677Z",
+     "start_time": "2021-01-28T02:40:06.120189Z"
     }
    },
    "outputs": [],
@@ -24,14 +24,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-27T03:08:16.705030Z",
-     "start_time": "2021-01-27T03:08:16.662558Z"
+     "end_time": "2021-01-28T02:40:09.733870Z",
+     "start_time": "2021-01-28T02:40:06.567197Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "environment variable OVERLAY_MONETARY_BASE_PATH not set defaulting to /Volumes/GIT/PycharmProjects/overlay-monetary\n"
+     ]
+    }
+   ],
    "source": [
     "from ovm.monetary.model import MonetaryModel\n",
     "\n",
@@ -143,11 +151,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-27T03:08:17.791953Z",
-     "start_time": "2021-01-27T03:08:17.754884Z"
+     "end_time": "2021-01-28T02:40:09.778595Z",
+     "start_time": "2021-01-28T02:40:09.735828Z"
     }
    },
    "outputs": [
@@ -157,7 +165,7 @@
        "0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,11 +177,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-27T03:08:17.975872Z",
-     "start_time": "2021-01-27T03:08:17.937094Z"
+     "end_time": "2021-01-28T02:40:09.826788Z",
+     "start_time": "2021-01-28T02:40:09.781415Z"
     }
    },
    "outputs": [
@@ -183,7 +191,7 @@
        "'WARNING'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,11 +202,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-27T03:08:18.157578Z",
-     "start_time": "2021-01-27T03:08:18.119041Z"
+     "end_time": "2021-01-28T02:40:09.872529Z",
+     "start_time": "2021-01-28T02:40:09.828701Z"
     }
    },
    "outputs": [
@@ -208,7 +216,7 @@
        "30"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,11 +227,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-27T03:08:18.342869Z",
-     "start_time": "2021-01-27T03:08:18.305080Z"
+     "end_time": "2021-01-28T02:40:09.919056Z",
+     "start_time": "2021-01-28T02:40:09.874850Z"
     }
    },
    "outputs": [],
@@ -240,11 +248,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-27T03:08:38.156459Z",
-     "start_time": "2021-01-27T03:08:38.117009Z"
+     "end_time": "2021-01-28T02:40:15.539293Z",
+     "start_time": "2021-01-28T02:40:15.496396Z"
     }
    },
    "outputs": [
@@ -261,7 +269,7 @@
        "['EOS-ETH', 'MKR-ETH', 'OVL-ETH', 'XRP-ETH']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,11 +318,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-27T03:11:10.874825Z",
-     "start_time": "2021-01-27T03:11:09.670918Z"
+     "end_time": "2021-01-28T02:40:17.694387Z",
+     "start_time": "2021-01-28T02:40:16.371616Z"
     }
    },
    "outputs": [
@@ -324,7 +332,7 @@
        "(1013821, 4)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,11 +347,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-27T03:11:12.472076Z",
-     "start_time": "2021-01-27T03:11:11.698124Z"
+     "end_time": "2021-01-28T02:40:18.345577Z",
+     "start_time": "2021-01-28T02:40:17.696678Z"
     }
    },
    "outputs": [
@@ -353,7 +361,7 @@
        "(1, 2629800, 4)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,11 +386,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-27T03:11:12.544068Z",
-     "start_time": "2021-01-27T03:11:12.473609Z"
+     "end_time": "2021-01-28T02:40:18.422978Z",
+     "start_time": "2021-01-28T02:40:18.347609Z"
     }
    },
    "outputs": [],
@@ -392,11 +400,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-27T03:11:14.229611Z",
-     "start_time": "2021-01-27T03:11:12.546183Z"
+     "end_time": "2021-01-28T02:40:20.066709Z",
+     "start_time": "2021-01-28T02:40:18.425279Z"
     }
    },
    "outputs": [
@@ -422,11 +430,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-27T03:11:15.745199Z",
-     "start_time": "2021-01-27T03:11:14.231784Z"
+     "end_time": "2021-01-28T02:40:21.555302Z",
+     "start_time": "2021-01-28T02:40:20.069068Z"
     }
    },
    "outputs": [
@@ -452,11 +460,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-27T03:11:15.788871Z",
-     "start_time": "2021-01-27T03:11:15.748226Z"
+     "end_time": "2021-01-28T02:40:21.592402Z",
+     "start_time": "2021-01-28T02:40:21.557987Z"
     }
    },
    "outputs": [],
@@ -468,11 +476,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-27T03:11:15.832524Z",
-     "start_time": "2021-01-27T03:11:15.791361Z"
+     "end_time": "2021-01-28T02:40:22.140089Z",
+     "start_time": "2021-01-28T02:40:22.104222Z"
     }
    },
    "outputs": [],
@@ -482,11 +490,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-27T03:11:15.945292Z",
-     "start_time": "2021-01-27T03:11:15.903285Z"
+     "end_time": "2021-01-28T02:40:23.394295Z",
+     "start_time": "2021-01-28T02:40:23.355886Z"
     }
    },
    "outputs": [],
@@ -506,11 +514,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-27T03:11:16.198782Z",
-     "start_time": "2021-01-27T03:11:16.159681Z"
+     "end_time": "2021-01-28T02:40:23.569620Z",
+     "start_time": "2021-01-28T02:40:23.530059Z"
     }
    },
    "outputs": [],
@@ -525,11 +533,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-27T03:11:28.681666Z",
-     "start_time": "2021-01-27T03:11:27.646321Z"
+     "end_time": "2021-01-28T02:40:24.775218Z",
+     "start_time": "2021-01-28T02:40:23.758013Z"
     }
    },
    "outputs": [],
@@ -545,11 +553,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-27T03:11:29.400775Z",
-     "start_time": "2021-01-27T03:11:29.359920Z"
+     "end_time": "2021-01-28T02:40:24.817151Z",
+     "start_time": "2021-01-28T02:40:24.777355Z"
     }
    },
    "outputs": [
@@ -559,7 +567,7 @@
        "dict_keys(['EOS-ETH', 'MKR-ETH', 'OVL-ETH', 'XRP-ETH'])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,11 +592,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-27T03:11:47.940604Z",
-     "start_time": "2021-01-27T03:11:47.884126Z"
+     "end_time": "2021-01-28T02:40:27.981870Z",
+     "start_time": "2021-01-28T02:40:27.924922Z"
     }
    },
    "outputs": [
@@ -707,9 +715,16 @@
    },
    "outputs": [],
    "source": [
-    "def run_model(number_of_steps_to_simulate: int):\n",
-    "    for i in tqdm(range(number_of_steps_to_simulate + 1)):\n",
-    "        monetary_model.step()"
+    "# def run_model(number_of_steps_to_simulate: int, use_tqdm: bool = True):\n",
+    "#     run_range = range(number_of_steps_to_simulate + 1)\n",
+    "#     if use_tqdm:\n",
+    "#         run_range = tqdm(run_range)\n",
+    "\n",
+    "#     try: \n",
+    "#         for i in run_range:\n",
+    "#             monetary_model.step()\n",
+    "#     finally:\n",
+    "#         print('end')\n"
    ]
   },
   {
@@ -772,7 +787,8 @@
     }
    ],
    "source": [
-    "run_model(number_of_steps_to_simulate)"
+    "monetary_model.run_steps(number_of_steps_to_simulate)\n",
+    "# run_model(number_of_steps_to_simulate)"
    ]
   },
   {
